@@ -11,6 +11,7 @@
 
     <properties>
         <mysql-version>5.1.27</mysql-version>
+        <groovy.version>2.3.6</groovy.version>
     </properties>
 
     <dependencies>
@@ -71,6 +72,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy.version}</version>
+        </dependency>
+
     </dependencies>
 
 
@@ -86,6 +93,9 @@
                 </configuration>
             </plugin>
 
+            <!--
+            MAVEN_OPTS="-Xms1024m -Xmx1024m -XX:PermSize=256M -XX:MaxPermSize=512M -Xdebug -Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=n" mvn jetty:run
+            -->
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
@@ -99,6 +109,38 @@
                         </connector>
                     </connectors>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/main/groovy</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>add-test-source</id>
+                        <phase>generate-test-sources</phase>
+                        <goals>
+                            <goal>add-test-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/test/groovy</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
